--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "rewrites": [
     {
       "source": "/api/:match*",
-      "destination": "https://netease-cloud-music-api-omega-jet.vercel.app//:match*"
+      "destination": "https://netease-cloud-music-api-omega-jet.vercel.app/:match*"
     }
   ]
 }
